<resources>
    <string name="app_name">Hack</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
  <string name="Dashboard">Dashboard</string>
    <string name="menu_home">View Project</string>
    <string name="menu_gallery">Add project</string>
    <string name="menu_slideshow">Profile</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share App</string>
    <string name="Logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
