<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/viewProject"
            android:icon="@drawable/viewproject"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/AddProject"
            android:icon="@drawable/add"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/Profile"
            android:icon="@drawable/profile"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/Settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />

        </menu>
    </item>

</menu>
